<resources>
    <string name="app_name"> Android Project 2017</string>
    <string name="action_about">About</string>
    <string name="action_Author">Author</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="text_microwave">Cooking in Microwave</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="stop">Stop</string>
    <string name="stop_microwave">Stop and reset microwave</string>
    <string name="btn_start">START</string>
    <string name="btn_stop">STOP</string>
    <string name="btn_restart">Restart</string>
    <string name="hint_enter_time">Please Enter time in seconds</string>
    <string name="set_temp">Set Temperature</string>
    <string name="action_settings">Setting</string>
    <string name="init_fridge_temp">3°C</string>
    <string name="initial_freezer_temp">0°C</string>
    <string name="text_kitchen_light">Kitchen Lights</string>
    <string name="microwave">Microwave</string>
    <string name="fridge">Fridge</string>
    <string name="microwaveTYPE">Microwave</string>
    <string name="microwaveNAME">Samsung Microwave</string>

    <string name="fridgeSETTING">5°C </string>


    <string name="microwaveSETTING">60 second </string>
    <string name="freezerNAME"> Samsung Freezer</string>
    <string name="freezerTYPE">Freezer</string>

    <string name="FreezerSETTING">-20°C </string>


    <string name="lightSETTING">60% </string>

    <string name="light">Main Light</string>

    <string name="lamp_2">Lamp 2 is a dimmable light. It will change it\'s power if the Slider below is dragged left or right.</string>
    <string name="smart_window_blinder">Smart Window Blinder: Use a slider to stimulate opening and closing blinds on window.</string>
    <string name="lamp3">Lamp 3 is a dimmable light. It will change color of light.</string>
    <string name="television"> Smart Television with simple interface: on/off,chanel entry,../..</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="enter">Enter..</string>
    <string name="switchonoff">SwitchOnOff</string>
    <string name="lamp_3">Lamp 3 is a dimmable light. It will change it.</string>
    <string name="living_tvonoff" />
    <string name="living_tvcontrol" />
    <string name="living_tvlogout" />
    <string name="text_lamp3_light" />
    <string name="lamp3_light" />


</resources>
