<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="10dp"
    android:orientation="vertical"
    android:padding="10dp">
  <EditText
      android:id="@+id/editDeviceName"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:hint="Select Device name"
      android:inputType="text"
      android:singleLine="true"/>
  <RadioGroup android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/deviceGroup"
      android:gravity="center"
      android:orientation="horizontal">
    <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/microwave"/>
    <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/fridge"/>
    <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/light"/>
  </RadioGroup>

</LinearLayout>