<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_microwave"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="phuong.example.com.androidproject.MicrowaveActivity">
  <TextView
      android:id="@+id/tv_microwavetimer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/text_microwave"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="40dp"/>
  <EditText
      android:id="@+id/editInputTime"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:digits="0123456789"
      android:ems="10"
      android:hint="@string/hint_enter_time"
      android:inputType="number"/>
  <TextView
      android:id="@+id/text_runningTime"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize="30sp"/>

  <ImageView
      android:id="@+id/microwaveImage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:adjustViewBounds="true"
      android:scaleType="fitXY"
      android:src="@drawable/microwave"
  />
  <ProgressBar
      android:id="@+id/microwave_progress"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:max="100"
      android:padding="5dp"
      android:visibility="invisible"
      style="?android:attr/indeterminateProgressStyle"/>
  <LinearLayout android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="horizontal">
    <Button
        android:id="@+id/onOffButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inputTime"
        android:layout_weight="1"
        android:text="@string/turn_on"
        style="@style/Base.Widget.AppCompat.Button.Colored"/>

    <Button
        android:id="@+id/microwave_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:text="@string/stop"
        style="@style/Base.Widget.AppCompat.Button.Colored"/>

    <Button
        android:id="@+id/microwave_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_restart"
        style="@style/Base.Widget.AppCompat.Button.Colored"/>
  </LinearLayout>
</LinearLayout>