<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_kitchen_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="phuong.example.com.androidproject.KitchenMainLightActivity">

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/text_kitchen_light"
      android:textSize="18sp"/>
  <ImageView
      android:id="@+id/imViewAndroid"
      android:layout_width="150dp"
      android:layout_height="140dp"
      android:layout_centerInParent="true"
      android:layout_gravity="center"
      android:layout_margin="20dp"
      android:background="@mipmap/ic_launcher"/>
  <TextView
      android:id="@+id/textView2"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="Drag slide bar left right for brightness"/>
  <SeekBar
      android:id="@+id/seekBarBrightNessChanger"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:max="100">
  </SeekBar>
  <TextView
      android:id="@+id/txtPercentage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="0 %"
      android:textAppearance="?android:attr/textAppearanceLarge"
      style="@style/Base.TextAppearance.AppCompat.Display2"/>
  <LinearLayout android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:paddingTop="16dp">
    <Button
        android:id="@+id/kitchen_light_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/turn_on"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:id="@+id/kitchen_light_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/turn_off"
        style="@style/Widget.AppCompat.Button.Colored"/>
  </LinearLayout>
</LinearLayout>